--- a/app/src/main/res/layout/settings_screen.xml
+++ b/app/src/main/res/layout/settings_screen.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="16pt"
+    android:layout_marginTop="?android:attr/actionBarSize">
 
     <TableRow
         android:layout_width="match_parent"
@@ -23,33 +25,33 @@
     </TableRow>
 
     <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/Location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/location_settings"
-                android:textSize="20sp" />
+        <TextView
+            android:id="@+id/Location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/location_settings"
+            android:textSize="20sp" />
 
-            <Switch
-                android:id="@+id/loc_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <Switch
+            android:id="@+id/loc_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        </TableRow>
+    </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/Logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/logout_settings"
-                android:textSize="20sp" />
-        </TableRow>
+        <TextView
+            android:id="@+id/Logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logout_settings"
+            android:textSize="20sp" />
+    </TableRow>
 
 </TableLayout>
