--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -1,13 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Profile"
-        android:textSize="24sp" />
-</RelativeLayout>
+    <EditText
+        android:id="@+id/Profile Name"
+        android:layout_width="275dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="26dp"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="Marie Lou"
+        android:textSize="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/Favorites"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:background="@drawable/border_style"
+        android:ems="10"
+        android:gravity="center"
+        android:inputType="textPersonName"
+        android:text="Favorite Games"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="346dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <Button
+        android:id="@+id/Fav Game 1"
+        android:layout_width="105dp"
+        android:layout_height="77dp"
+        android:layout_marginLeft="8dp"
+        android:text="Circle of Death"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="407dp" />
+
+    <Button
+        android:id="@+id/Fav Game 2"
+        android:layout_width="105dp"
+        android:layout_height="76dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="King's Cup"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintLeft_toRightOf="@+id/Fav Game 1"
+        app:layout_constraintRight_toLeftOf="@+id/Fav Game 3"
+        tools:layout_editor_absoluteY="407dp" />
+
+    <Button
+        android:id="@+id/Fav Game 3"
+        android:layout_width="105dp"
+        android:layout_height="76dp"
+        android:layout_marginRight="8dp"
+        android:text="Ride the Bus"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="407dp" />
+
+</android.support.constraint.ConstraintLayout>
