--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -3,23 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="?android:attr/actionBarSize">
 
     <EditText
-        android:id="@+id/Profile Name"
-        android:layout_width="275dp"
-        android:layout_height="75dp"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="26dp"
+        android:id="@+id/Profile_Name"
+        android:layout_width="344dp"
+        android:layout_height="49dp"
         android:background="@android:color/transparent"
+        android:clickable="false"
+        android:editable="false"
         android:ems="10"
+        android:focusable="false"
         android:gravity="center"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:text="Marie Lou"
         android:textSize="50dp"
+        app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp" />
 
     <EditText
         android:id="@+id/Favorites"
@@ -28,41 +32,48 @@
         android:background="@drawable/border_style"
         android:ems="10"
         android:gravity="center"
-        android:inputType="textPersonName"
+        android:inputType="none"
+        android:editable="false"
+        android:focusable="false"
+        android:clickable="false"
         android:text="Favorite Games"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="346dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/Fav_Game_2" />
 
     <Button
-        android:id="@+id/Fav Game 1"
+        android:id="@+id/Fav_Game_1"
         android:layout_width="105dp"
         android:layout_height="77dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="16dp"
         android:text="Circle of Death"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="407dp" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="16dp" />
 
     <Button
-        android:id="@+id/Fav Game 2"
+        android:id="@+id/Fav_Game_2"
         android:layout_width="105dp"
         android:layout_height="76dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:text="King's Cup"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintLeft_toRightOf="@+id/Fav Game 1"
-        app:layout_constraintRight_toLeftOf="@+id/Fav Game 3"
-        tools:layout_editor_absoluteY="407dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteX="129dp" />
 
     <Button
-        android:id="@+id/Fav Game 3"
+        android:id="@+id/Fav_Game_3"
         android:layout_width="105dp"
         android:layout_height="76dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
         android:text="Ride the Bus"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="407dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp" />
 
 </android.support.constraint.ConstraintLayout>
