--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#292a2d</color>
     <color name="colorPrimaryDark">#141415</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="boozeyColor">#FFFFAF40</color>
 </resources>
