--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -103,4 +103,16 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/Favorites" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="162dp"
+        android:layout_height="183dp"
+        app:srcCompat="@mipmap/beer_red"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/Profile_Name" />
+
 </android.support.constraint.ConstraintLayout>
