--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,8 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/boozeyColor">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
@@ -43,14 +44,14 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textColor="@color/boozeyColor"
-                    android:textColorHint="@color/boozeyColor"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/boozeyColor">
 
                 <EditText
                     android:id="@+id/password"
@@ -63,7 +64,6 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:textColor="@color/boozeyColor"
-                    android:textColorHint="@color/boozeyColor"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
