--- a/app/src/main/res/layout/settings_screen.xml
+++ b/app/src/main/res/layout/settings_screen.xml
@@ -3,8 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:stretchColumns="1"
-    android:layout_marginLeft="16pt"
-    android:layout_marginTop="?android:attr/actionBarSize">
+    android:layout_marginLeft="16pt">
 
     <TableRow
         android:layout_width="match_parent"
