--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -82,6 +82,9 @@
         android:ems="10"
         android:inputType="number"
         android:text="W 18"
+        android:clickable="false"
+        android:editable="false"
+        android:focusable="false"
         android:gravity="center"
         android:background="@android:color/transparent"
         android:layout_marginLeft="32dp"
@@ -96,6 +99,9 @@
         android:ems="10"
         android:inputType="number"
         android:text="L 11"
+        android:clickable="false"
+        android:editable="false"
+        android:focusable="false"
         android:gravity="center"
         android:background="@android:color/transparent"
         android:layout_marginRight="32dp"
